force-app/main/default/objects/Unit__c/fields/OnlineReservationFee__c.field-meta.xml
<CustomField>
    <fullName>OnlineReservationFee__c</fullName>
    <label>OnlineReservationFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>