force-app/main/default/objects/Unit__c/fields/OpenSpaceProximity__c.field-meta.xml
<CustomField>
    <fullName>OpenSpaceProximity__c</fullName>
    <description>For capturing the Plot Open Space Adjacency of the Unit</description>
    <label>Open Space Proximity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>