force-app/main/default/objects/Unit__c/fields/Outstanding_Service_Change__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Service_Change__c</fullName>
    <label>Outstanding Service Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>