force-app/main/default/objects/Unit__c/fields/PlotArea__c.field-meta.xml
<CustomField>
    <fullName>PlotArea__c</fullName>
    <description>For capturing the Plot Area of the Unit</description>
    <label>Plot Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>