force-app/main/default/objects/Unit__c/fields/PoolArea__c.field-meta.xml
<CustomField>
    <fullName>PoolArea__c</fullName>
    <description>For capturing the Pool Area of the Unit</description>
    <label>Pool Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>