force-app/main/default/objects/Unit__c/fields/PostBCCDate__c.field-meta.xml
<CustomField>
    <fullName>PostBCCDate__c</fullName>
    <description>For capturing the Post BCC Date of the Unit</description>
    <label>Post BCC Date</label>
    <type>Date</type>
</CustomField>