force-app/main/default/objects/Unit__c/fields/Premium_Price__c.field-meta.xml
<CustomField>
    <fullName>Premium_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Premium Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>