force-app/main/default/objects/Unit__c/fields/Prior_Year_Reserve_Fund_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Reserve_Fund_Service_Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prior Year Reserve Fund Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>