force-app/main/default/objects/Unit__c/fields/Prior_Year_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Service_Charge__c</fullName>
    <formula>Prior_Year_Reserve_Fund_Service_Charge__c  +  Prior_Year_General_Fund_Service_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Year Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>