force-app/main/default/objects/Unit__c/fields/PropertyStatus__c.field-meta.xml
<CustomField>
    <fullName>PropertyStatus__c</fullName>
    <description>For capturing the Property Status of the Unit</description>
    <label>Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>