force-app/main/default/objects/Unit__c/fields/PropertyUsage__c.field-meta.xml
<CustomField>
    <fullName>PropertyUsage__c</fullName>
    <description>For capturing the Property Usage of the Unit</description>
    <label>Property Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Car Park</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>