force-app/main/default/objects/Unit__c/fields/RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to capture the Related Opportunity</description>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>UnitsRelatedOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>