force-app/main/default/objects/Unit__c/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <description>Field to capture the Release Date</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>