force-app/main/default/objects/Unit__c/fields/RetailProximity__c.field-meta.xml
<CustomField>
    <fullName>RetailProximity__c</fullName>
    <description>Field to capture the Retail Proximity</description>
    <label>Retail Proximity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>