force-app/main/default/objects/Unit__c/fields/SaleableArea__c.field-meta.xml
<CustomField>
    <fullName>SaleableArea__c</fullName>
    <description>Field to capture the Saleable Area</description>
    <label>Saleable Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>