force-app/main/default/objects/Unit__c/fields/SAP_Business_Entity_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Business_Entity_No__c</fullName>
    <label>SAP Business Entity No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>