force-app/main/default/objects/Unit__c/fields/SAP_Location_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Location_No__c</fullName>
    <label>SAP Location No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>