force-app/main/default/objects/Unit__c/fields/SAP_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Unit_Number__c</fullName>
    <label>SAP Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>