force-app/main/default/objects/Unit__c/fields/SAP_Update_Flag__c.field-meta.xml
<CustomField>
    <fullName>SAP_Update_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP Update Flag</label>
    <type>Checkbox</type>
</CustomField>