force-app/main/default/objects/Unit__c/fields/SAP_Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>SAP_Usage_Type__c</fullName>
    <label>SAP Usage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>