force-app/main/default/objects/Unit__c/fields/SchoolProximity_del__c.field-meta.xml
<CustomField>
    <fullName>SchoolProximity_del__c</fullName>
    <description>Field to capture the School Proximity</description>
    <label>School Proximity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>