force-app/main/default/objects/Unit__c/fields/SellingPrice__c.field-meta.xml
<CustomField>
    <fullName>SellingPrice__c</fullName>
    <description>Field to capture the Selling Price</description>
    <label>Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>