force-app/main/default/objects/Unit__c/fields/SellingPriceComments__c.field-meta.xml
<CustomField>
    <fullName>SellingPriceComments__c</fullName>
    <description>Field to capture the Selling Price Comments</description>
    <label>Selling Price Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>