force-app/main/default/objects/Unit__c/fields/Send_to_GIS__c.field-meta.xml
<CustomField>
    <fullName>Send_to_GIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to GIS</label>
    <type>Checkbox</type>
</CustomField>