force-app/main/default/objects/Unit__c/fields/ShortNumber__c.field-meta.xml
<CustomField>
    <fullName>ShortNumber__c</fullName>
    <description>Field to capture the Short Number</description>
    <label>Short Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>