force-app/main/default/objects/Unit__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Field to capture the Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>