force-app/main/default/objects/Unit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Field to capture the Status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
                <default>true</default>
                <label>Unassigned</label>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
                <isActive>false</isActive>
                <label>Leased</label>
            </value>
            <value>
                <fullName>Leased Pending</fullName>
                <isActive>false</isActive>
                <label>Leased Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>