force-app/main/default/objects/Unit__c/fields/Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>