force-app/main/default/objects/Unit__c/fields/Total_Area_sqft_read__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_sqft_read__c</fullName>
    <label>Total Area sqft read</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>