force-app/main/default/objects/Unit__c/fields/UnitCategory__c.field-meta.xml
<CustomField>
    <fullName>UnitCategory__c</fullName>
    <description>Field to capture the Unit Category</description>
    <label>Unit Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>