force-app/main/default/objects/Unit__c/fields/UnitModel__c.field-meta.xml
<CustomField>
    <fullName>UnitModel__c</fullName>
    <label>Unit Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>1BHK</fullName>
            </value>
            <value>
                <fullName>2BHK</fullName>
            </value>
            <value>
                <fullName>3BHK</fullName>
            </value>
            <value>
                <fullName>4BHK</fullName>
            </value>
            <value>
                <fullName>5BHK</fullName>
            </value>
            <value>
                <fullName>6BHK</fullName>
            </value>
            <value>
                <fullName>1BHK+1</fullName>
            </value>
            <value>
                <fullName>2BHK+1</fullName>
            </value>
            <value>
                <fullName>2BHK+M</fullName>
            </value>
            <value>
                <fullName>3BHK+1</fullName>
            </value>
            <value>
                <fullName>3BHK+1+M</fullName>
            </value>
            <value>
                <fullName>3BHK+D</fullName>
            </value>
            <value>
                <fullName>3BHK+M</fullName>
            </value>
            <value>
                <fullName>3BR-B2</fullName>
            </value>
            <value>
                <fullName>4BHK+1</fullName>
            </value>
            <value>
                <fullName>4BHK+1+M</fullName>
            </value>
            <value>
                <fullName>4BHK+M</fullName>
            </value>
            <value>
                <fullName>5BHK+M</fullName>
            </value>
            <value>
                <fullName>6BHK+1+M</fullName>
            </value>
            <value>
                <fullName>7BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>