force-app/main/default/objects/Unit__c/fields/UnitNumber__c.field-meta.xml
<CustomField>
    <fullName>UnitNumber__c</fullName>
    <description>Field to capture the Unit Number</description>
    <label>Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>