force-app/main/default/objects/Unit__c/fields/UnitPlotArea__c.field-meta.xml
<CustomField>
    <fullName>UnitPlotArea__c</fullName>
    <description>Field to capture the Unit Plot Area</description>
    <label>Unit Plot Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>