force-app/main/default/objects/Unit__c/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Loft</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Serviced Apartment</fullName>
            </value>
            <value>
                <fullName>Hotel Apartment</fullName>
            </value>
            <value>
                <fullName>Show Room</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>