force-app/main/default/objects/Unit__c/fields/UnitView__c.field-meta.xml
<CustomField>
    <fullName>UnitView__c</fullName>
    <description>Field to capture the Unit View</description>
    <label>Unit View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>