force-app/main/default/objects/Unit__c/fields/Utility_Building__c.field-meta.xml
<CustomField>
    <fullName>Utility_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utility Building</label>
    <type>Checkbox</type>
</CustomField>