force-app/main/default/objects/Unit__c/fields/UtilityProximity__c.field-meta.xml
<CustomField>
    <fullName>UtilityProximity__c</fullName>
    <description>Field to capture the Utility Adjacency</description>
    <label>Utility Proximity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>