force-app/main/default/objects/Unit__c/fields/Virtual_Bank_Account_number__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Bank_Account_number__c</fullName>
    <label>Virtual Account Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>