force-app/main/default/objects/Unit__c/fields/WebFloorPlan__c.field-meta.xml
<CustomField>
    <fullName>WebFloorPlan__c</fullName>
    <description>Field to capture the Web Floor Plan</description>
    <label>Web Floor Plan</label>
    <type>Url</type>
</CustomField>