force-app/main/default/objects/Unit__c/validationRules/BlockUnitValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockUnitValidationRule</fullName>
    <active>true</active>
    <description>Validation Rule to ensure block information are populated  when unit status changes to Blocked</description>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Blocked&apos;), OR(  ISBLANK(   TEXT(BlockedReason__c ) )))</errorConditionFormula>
    <errorMessage>Please edit the Blocked By, Blocked Reason and Blocked Comments fields.</errorMessage>
</ValidationRule>