force-app/main/default/objects/Unit__c/validationRules/Required_fields_for_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_for_Booking</fullName>
    <active>true</active>
    <description>When unit status is updated as In-Progress or Booked</description>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
OR(ISPICKVAL(Status__c, &apos;In-Progress&apos;),ISPICKVAL(Status__c, &apos;Booked&apos;)),
ISBLANK(LockedBy__c)
)</errorConditionFormula>
    <errorMessage>Required fields are missing for updating the status.</errorMessage>
</ValidationRule>