force-app/main/default/objects/Unit__c/validationRules/Restrict_Blocking.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Blocking</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Blocked&quot;), ISPICKVAL(PRIORVALUE(Status__c), &quot;Booked&quot;) )</errorConditionFormula>
    <errorMessage>Cannot Block a Booked Unit</errorMessage>
</ValidationRule>