force-app/main/default/objects/Unit__c/validationRules/Unique_Name_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Name_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  CONTAINS(
      VLOOKUP( 
        $ObjectType.Unit__c.Fields.Name , 
        $ObjectType.Unit__c.Fields.Name, Name
      ), 
      Name
    ), 
  OR(
      ISNEW(), ISCHANGED(Name)
    ) 
  )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please provide a unique code for all the units.</errorMessage>
</ValidationRule>